--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="help">Help</string>
     <string name="about">About</string>
     <string name="sign_out">Sign out</string>
-    <string name="user_name">User Name</string>
+    <string name="email">User Name</string>
     <string name="account_type">Account Type</string>
     <string name="scanning">Scanning</string>
     <string name="product_barcode">Product Barcode</string>
