Bug profile | payment, success, routine detail and apply

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">mobile</string>
+    <string name="skin_type_prompt">Select Skin Type</string>
+    <string name="category_prompt">Select Category</string>
+    <string name="search_hint">Enter Product ID or Name</string>
+    <string name="search_button">Search</string>
 </resources>
